--- a/style.css
+++ b/style.css
@@ -6,18 +6,29 @@
   -moz-user-select: none;
 }
 
+.callsmusic {
+  letter-spacing: -1px;
+}
+
 body {
   margin: 40px auto;
   max-width: 650px;
   line-height: 1.6;
   font-size: 130%;
   padding: 0 10px;
+  color: #3f37c9;
+  background: #eee;
 }
 
 h1,
 h2,
 h3 {
   line-height: 1.2;
+}
+
+a,
+a:visited {
+  color: #3f37c9;
 }
 
 h1::before,
@@ -39,16 +50,10 @@ h3::before {
   content: "###";
 }
 
-@media (prefers-color-scheme: light) {
-  body {
-    color: #3f37c9;
-    background: #eee;
-  }
-
-  a,
-  a:visited {
-    color: #3f37c9;
-  }
+div.separator {
+  height: 1px;
+  background-color: #3f37c9;
+  width: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -62,8 +67,8 @@ h3::before {
   a:visited {
     color: #fff;
   }
-}
 
-body h1:first-child {
-  cursor: pointer;
+  div.separator {
+    background-color: #fff;
+  }
 }
